<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.freme-project.e-services</groupId>
	<artifactId>freme-ner</artifactId>
	<version>1.2-SNAPSHOT</version>

	<packaging>jar</packaging>
	<name>FremeNER</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<scala.version>2.11.4</scala.version>
		<scala.compiler.Xmx>-Xmx1024m</scala.compiler.Xmx>
	</properties>

	<parent>
		<groupId>eu.freme-project</groupId>
		<artifactId>freme-parent</artifactId>
		<version>1.4</version>
	</parent>

	<developers>
		<developer>
			<name>Milan Dojchinovski</name>
			<email>milan.dojchinovski@fit.cvut.cz</email>
			<organization>Agile Knowledge Engineering and Semantic Web</organization>
			<organizationUrl>http://aksw.org/</organizationUrl>
		</developer>
		<developer>
			<name>Sandro Coelho</name>
			<email>sandroacoelho@gmail.com</email>
			<organization>Agile Knowledge Engineering and Semantic Web</organization>
			<organizationUrl>http://aksw.org/</organizationUrl>
		</developer>
		<developer>
			<name>Nilesh Chakraborty</name>
			<email>nilesh@nileshc.com</email>
			<organization>Agile Knowledge Engineering and Semantic Web</organization>
			<organizationUrl>http://aksw.org/</organizationUrl>
		</developer>
	</developers>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.scala-tools</groupId>
					<artifactId>maven-scala-plugin</artifactId>
					<version>2.15.2</version>

					<configuration>
						<launchers>
							<launcher>
								<id>server</id>
								<mainClass>org.elinker.core.api.Server</mainClass>
								<jvmArgs>
									<jvmArg>-server</jvmArg>
									<jvmArg>-Xmx32G</jvmArg>
									<jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
									<jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
									<!-- <jvmArg>-XX:+PrintGC</jvmArg> <jvmArg>-XX:+PrintGCTimeStamps</jvmArg> -->
								</jvmArgs>
							</launcher>
							<launcher>
								<id>indextsv</id>
								<mainClass>org.elinker.scripts.IndexDBpediaTSV</mainClass>
								<jvmArgs>
									<jvmArg>-server</jvmArg>
									<jvmArg>-Xmx32G</jvmArg>
									<jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
									<jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
									<!-- <jvmArg>-XX:+PrintGC</jvmArg> <jvmArg>-XX:+PrintGCTimeStamps</jvmArg> -->
								</jvmArgs>
							</launcher>
						</launchers>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>

				<executions>
					<execution>
						<id>compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<phase>compile</phase>
					</execution>

					<execution>
						<id>test-compile</id>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<phase>test-compile</phase>
					</execution>

					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>



			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>${scala.version}</version>
			</dependency>

			<!-- server, live -->
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-actors</artifactId>
				<version>${scala.version}</version>
			</dependency>

			<!-- override scalatest dependency version of scala-reflect -->
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-reflect</artifactId>
				<version>${scala.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>incremental</id>
			<build>
				<plugins>
					<plugin>
						<groupId>net.alchim31.maven</groupId>
						<artifactId>scala-maven-plugin</artifactId>

						<configuration>
							<!-- Enable incremental compilation -->
							<recompileMode>incremental</recompileMode>
							<!-- Use an external Zinc server for compilation. If there is no Zinc 
								server currently running then the plugin falls back to regular incremental 
								compilation. Seems pretty safe. -->
							<useZincServer>true</useZincServer>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-routing_2.11</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-can_2.11</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-http_2.11</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>io.spray</groupId>
			<artifactId>spray-json_2.11</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-contrib_2.11</artifactId>
			<version>2.3.9</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-actor_2.11</artifactId>
			<version>2.3.9</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.slick</groupId>
			<artifactId>slick_2.11</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.slick</groupId>
			<artifactId>slick-codegen_2.11</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.json4s</groupId>
			<artifactId>json4s-native_2.11</artifactId>
			<version>3.2.11</version>
		</dependency>
		<dependency>
			<groupId>org.json4s</groupId>
			<artifactId>json4s-jackson_2.11</artifactId>
			<version>3.2.11</version>
		</dependency>
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.5.2</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.5.2</version>
			<classifier>models</classifier>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.5.2</version>
			<classifier>models-german</classifier>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.5.2</version>
			<classifier>models-spanish</classifier>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.8.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-solrj</artifactId>
			<version>5.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>eu.freme-project.bservices.controllers</groupId>
			<artifactId>users</artifactId>
		</dependency>
		<dependency>
			<groupId>eu.freme-project.bservices</groupId>
			<artifactId>test-helper</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.rockymadden.stringmetric</groupId>
			<artifactId>stringmetric-core_2.11</artifactId>
			<version>0.27.4</version>
		</dependency>
		<dependency>
			<groupId>org.nlp2rdf</groupId>
			<artifactId>nif</artifactId>
			<version>0.3.8</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.16.12</version>
		</dependency>
		<dependency>
			<groupId>org.ahocorasick</groupId>
			<artifactId>ahocorasick</artifactId>
			<version>0.3.0</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>local-repo</id>
			<url>file://${basedir}/mavenlocal</url>
		</repository>
		<repository>
			<id>scala</id>
			<name>Scala Tools</name>
			<url>http://scala-tools.org/repo-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>



	<scm>
		<connection>scm:git:git@github.com:freme-project/freme-ner.git</connection>
		<url>scm:git:git@github.com/freme-project:freme-ner.git</url>
		<developerConnection>scm:git:git@github.com:freme-project/freme-ner.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<pluginRepositories>
		<pluginRepository>
			<id>scala</id>
			<name>Scala Tools</name>
			<url>http://scala-tools.org/repo-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
